--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-plugin-amplitude-analytics",
+  "name": "@shawacademy-com/gatsby-plugin-amplitude-analytics",
   "description": "Plugin to add Amplitude analytics to a Gatsby site",
-  "version": "3.2.0",
+  "version": "1.0.0",
   "author": "Ryan Ashcraft <ryan@ryanashcraft.me>",
   "bugs": {
     "url": "https://github.com/ryanashcraft/gatsby-plugin-amplitude-analytics/issues"
@@ -33,7 +33,10 @@
   "peerDependencies": {
     "gatsby": ">2.0.0-alpha"
   },
-  "repository": "https://github.com/ryanashcraft/gatsby-plugin-amplitude-analytics",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ryanashcraft/gatsby-plugin-amplitude-analytics.git"
+  },
   "scripts": {
     "build": "babel src --out-dir . --ignore **/__tests__",
     "prepare": "cross-env NODE_ENV=production npm run build",
