--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@shawacademynpm/gatsby-plugin-amplitude-analytics",
   "description": "Plugin to add Amplitude analytics to a Gatsby site",
   "version": "1.0.0",
-  "author": "Ryan Ashcraft <ryan@ryanashcraft.me>",
+  "author": "Shaw Academy",
   "bugs": {
-    "url": "https://github.com/ryanashcraft/gatsby-plugin-amplitude-analytics/issues"
+    "url": "https://github.com/shawacademy-com/gatsby-plugin-amplitude-analytics/issues"
   },
   "dependencies": {
     "@babel/runtime": "^7.0.0"
@@ -21,7 +21,7 @@
     "@babel/preset-react": "^7.0.0",
     "cross-env": "^5.1.4"
   },
-  "homepage": "https://github.com/ryanashcraft/gatsby-plugin-amplitude-analytics#readme",
+  "homepage": "https://github.com/shawacademy-com/gatsby-plugin-amplitude-analytics#readme",
   "keywords": [
     "gatsby",
     "gatsby-plugin",
@@ -35,7 +35,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ryanashcraft/gatsby-plugin-amplitude-analytics.git"
+    "url": "git+https://github.com/shawacademy-com/gatsby-plugin-amplitude-analytics.git"
   },
   "scripts": {
     "build": "babel src --out-dir . --ignore **/__tests__",
